deploy/manifests/traefik-custom.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system-traefik
