deploy/manifests/jellyfin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - name: jellyfin-web
    port: 8080
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      name: jellyfin
      namespace: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - compute
      containers:
      - env:
        - name: JELLYFIN_PublishedServerUrl
          value: https://jellyfin.app.rick-dev.expresso.lan
        - name: JELLYFIN_DATA_DIR
          value: /data
        - name: PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: webpassword
              optional: false
        image: docker.io/linuxserver/jellyfin:latest
        livenessProbe:
          initialDelaySeconds: 120
          tcpSocket:
            port: 8096
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        resources:
          limits:
            cpu: 5000m
            memory: 15G
          requests:
            cpu: 500m
            memory: 1G
        securityContext:
          capabilities:
            drop:
            - NET_ADMIN
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
          privileged: true
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: conf
          subPath: config
        - mountPath: /config/cache
          name: cache
          subPath: cache
        - mountPath: /dev/dri/renderD128
          name: dev-dri
        - mountPath: /config/log
          name: logs
          subPath: log
        - mountPath: /config/data/transcodes
          name: transcodes
          subPath: transcodes
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: conf
        persistentVolumeClaim:
          claimName: jellyfin-conf-pvc
      - hostPath:
          path: /dev/dri/renderD128
          type: CharDevice
        name: dev-dri
      - hostPath:
          path: /dev/dri/card1
          type: CharDevice
        name: card1
      - emptyDir:
          medium: Memory
          sizeLimit: 2Gi
        name: cache
      - emptyDir:
          medium: Memory
          sizeLimit: 500Mi
        name: logs
      - emptyDir:
          medium: Memory
          sizeLimit: 10Gi
        name: transcodes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  rules:
  - host: jellyfin.app.rick.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              name: jellyfin-web
        path: /
        pathType: Prefix
  - host: jellyfin.app.rick-dev.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              name: jellyfin-web
        path: /
        pathType: Prefix
