deploy/manifests/pihole.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: pihole
  name: pihole-dns
  namespace: pihole
spec:
  ports:
  - name: 53-53-udp
    nodePort: 30053
    port: 1053
    protocol: UDP
    targetPort: dns-udp
  selector:
    app: pihole
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: pihole
  name: pihole-web
spec:
  ports:
  - name: web-admin
    port: 8090
    protocol: TCP
    targetPort: http-web-admin
  selector:
    app: pihole
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        services: dns
      name: pihole
      namespace: pihole
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: services
                operator: In
                values:
                - dns
      automountServiceAccountToken: false
      containers:
      - env:
        - name: VIRTUAL_HOST
          value: pihole.rick.expresso.lan
        - name: ServerIP
          value: 10.50.0.2
        - name: TZ
          value: America/New_York
        - name: DNSMASQ_LISTENING
          value: all
        - name: FTLCONF_LOCAL_IPV4
          value: 10.50.0.2
        - name: PIHOLE_DNS_
          value: 127.0.0.1#5335
        - name: DHCP_ACTIVE
          value: "false"
        - name: TEMPERATUREUNIT
          value: f
        - name: WEBTHEME
          value: default-darker
        - name: WEB_PORT
          value: "8090"
        - name: WEBPASSWORD
          valueFrom:
            secretKeyRef:
              key: admin
              name: webpassword
              optional: false
        image: docker.io/pihole/pihole:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - dig
            - www.google.com
            - '@localhost'
            - -p
            - "1053"
          initialDelaySeconds: 60
          periodSeconds: 5
        name: pihole
        ports:
        - containerPort: 1053
          name: dns-udp
          protocol: UDP
        - containerPort: 1053
          name: dns-tcp
          protocol: TCP
        - containerPort: 8090
          name: http-web-admin
          protocol: TCP
        resources:
          limits:
            cpu: 5000m
            memory: 150Mi
          requests:
            cpu: 500m
            memory: 100Mi
        securityContext:
          capabilities:
            add:
            - CAP_SYS_NICE
            - CAP_CHOWN
            drop:
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
        volumeMounts:
        - mountPath: /etc/dnsmasq.d/05-pihole-custom-cname.conf
          mountPropagation: None
          name: pihole-cname
          subPath: 05-pihole-custom-cname.conf
        - mountPath: /etc/pihole/custom.list
          mountPropagation: None
          name: pihole-local
          subPath: custom.list
        - mountPath: /etc/dnsmasq.d/port.conf
          name: dnsmasq-port-config
          subPath: port.conf
      - image: madnuttah/unbound:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - nslookup
            - www.google.com
            - 127.0.0.1:5335
          initialDelaySeconds: 60
          periodSeconds: 5
        name: unbound
        resources:
          limits:
            cpu: 30m
            memory: 100Mi
          requests:
            cpu: 30m
            memory: 100Mi
        volumeMounts:
        - mountPath: /opt/unbound/etc/unbound
          name: unbound-config
          readOnly: true
      dnsConfig:
        nameservers:
        - 127.0.0.1
        - 1.1.1.1
      dnsPolicy: None
      enableServiceLinks: false
      hostname: pihole
      restartPolicy: Always
      volumes:
      - configMap:
          name: pihole-local-records
          optional: false
        name: pihole-local
      - configMap:
          name: pihole-cname-records
          optional: false
        name: pihole-cname
      - name: webpassword
        secret:
          defaultMode: 256
          optional: false
          secretName: webpassword
      - configMap:
          name: unbound-conf
          optional: false
        name: unbound-config
      - configMap:
          name: dnsmasq-port-conf
          optional: false
        name: dnsmasq-port-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: pihole
  name: pihole-web
  namespace: pihole
spec:
  rules:
  - host: pihole.app.rick.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: pihole-web
            port:
              name: web-admin
        path: /admin
        pathType: Prefix
