deploy/manifests/v4l2rtspserver.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: v4l2rtspserver
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rtsp0
    camera: "0"
    svccontroller.k3s.cattle.io/lbpool: pool1
  name: rtsp0-http
  namespace: v4l2rtspserver
spec:
  ports:
  - name: 8085-8085-http
    port: 8085
    targetPort: rtsp-http
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rtsp0
    camera: "0"
  name: rtsp0-tcp
  namespace: v4l2rtspserver
spec:
  ports:
  - name: 8554-8554-tcp
    port: 8554
    protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rtsp0
    camera: "0"
  name: rtsp0-udp
  namespace: v4l2rtspserver
spec:
  ports:
  - name: 8554-8554-udp
    port: 8554
    protocol: UDP
    targetPort: rtsp-udp
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rtsp0
  name: rtsp0
  namespace: v4l2rtspserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rtsp0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rtsp0
      name: rtsp0
      namespace: v4l2rtspserver
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: camera
                operator: In
                values:
                - "0"
      containers:
      - args:
        - -p
        - "8085"
        - -P
        - "8554"
        - -u
        - ""
        - /dev/video0,/dev/video0
        image: docker.io/mpromonet/v4l2rtspserver:latest
        livenessProbe:
          initialDelaySeconds: 120
          tcpSocket:
            port: rtsp-tcp
        name: camera-default
        ports:
        - containerPort: 8554
          name: rtsp-udp
          protocol: UDP
        - containerPort: 8554
          name: rtsp-tcp
          protocol: TCP
        - containerPort: 8085
          name: rtsp-http
        resources:
          limits:
            cpu: 2000m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /dev/snd
          name: snd0
        - mountPath: /etc/user-password
          name: password
        - mountPath: /dev/video0
          name: video0
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /dev/video0
          type: CharDevice
        name: video0
      - hostPath:
          path: /dev/snd
          type: Directory
        name: snd0
      - name: password
        secret:
          defaultMode: 256
          optional: false
          secretName: user-password
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: rtsp0
  name: rtsp0-http
  namespace: v4l2rtspserver
spec:
  rules:
  - host: rtsp0-http.rick.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: rtsp0-http
            port:
              name: 8085-8085-http
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: rtsp0
  name: rtsp0-tcp
  namespace: v4l2rtspserver
spec:
  rules:
  - host: rtsp0-tcp.rick.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: rtsp0-tcp
            port:
              name: 8554-8554-tcp
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.frontend.rule.type: PathPrefix
  labels:
    app: rtsp0
  name: rtsp0-udp
  namespace: v4l2rtspserver
spec:
  rules:
  - host: rtsp0-udp.rick.expresso.lan
    http:
      paths:
      - backend:
          service:
            name: rtsp0-udp
            port:
              name: 8554-8554-udp
        path: /
        pathType: Prefix
